# django_polls

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
django_polls/: asgi.py  settings.py  urls.py  wsgi.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: bg2.avif
polls/templates/polls/: details.html  index2.html  index3.html  results.html
